add second second square class

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ background-color: #A63E26;
 height: 50px;
 width:50px;
 }
+.square1 {
+background-color: #D97B29;
+height: 50px;
+width:50px;
+}
 header{
 text-align:center;
 }
