add third square

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ background-color: #D97B29;
 height: 50px;
 width:50px;
 }
+.square2 {
+background-color: #D97B29;
+height: 50px;
+width:50px;
+}
 header{
 text-align:center;
 }
