Add fourth square

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,11 @@ background-color: #4D5922;
 height: 50px;
 width:50px;
 }
+.square3 {
+background-color: #4D5922;
+height: 50px;
+width:50px;
+}
 header{
 text-align:center;
 }
