Add another square

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,12 @@ height: 50px;
 width:50px;
 }
 .square3 {
-background-color: #4D5922;
+background-color: #8BABB5;
+height: 50px;
+width:50px;
+}
+.square4 {
+background-color: #8BABB5;
 height: 50px;
 width:50px;
 }
