Add another sqaure

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ background-color: #A65844;
 height: 50px;
 width:50px;
 }
+.square5 {
+background-color: #A65844;
+height: 50px;
+width:50px;
+}
 header{
 text-align:center;
 }
