add another square

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,11 @@ background-color: #9E1064;
 height: 50px;
 width:50px;
 }
+.square6{
+background-color: #9E1064;
+height: 50px;
+width:50px;
+}
 header{
 text-align:center;
 }
