change sqaure color

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ width:50px;
 position: absolute;
 top: 0px;
 left: 50px;
-background-color: #7D1FA6;
+background-color: #F2C166;
 height: 50px;
 width:50px;
 }
