--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,14 @@ background-color: #F2C166;
 height: 50px;
 width:50px;
 }
+.square8{
+position: absolute;
+top: 50px;
+left: 50px;
+background-color: #F2C166;
+height: 50px;
+width:50px;
+}
 
 
 header{
