Add another sqaure class

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ width:50px;
 position: absolute;
 top: 50px;
 left: 50px;
-background-color: #F2C166;
+background-color: #BF0449;
 height: 50px;
 width:50px;
 }
