Add another square

--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,15 @@ background-color: #BF0449;
 height: 50px;
 width:50px;
 }
+.square9{
+position: absolute;
+top: 100px;
+left: 50px;
+background-color: #BF0449;
+height: 50px;
+width:50px;
+}
+
 
 
 header{
