Change sqaure color

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ width:50px;
 position: absolute;
 top: 100px;
 left: 50px;
-background-color: #BF0449;
+background-color: #A8AD80;
 height: 50px;
 width:50px;
 }
