Add another sqaure

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,14 @@ background-color: #A8AD80;
 height: 100px;
 width:100px;
 }
+.square10{
+position: absolute;
+top: 200px;
+left: 100px;
+background-color: #A8AD80;
+height: 100px;
+width:100px;
+}
 
 
 
