--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ width:100px;
 position: absolute;
 top: 400px;
 left: 100px;
-background-color: #A8AD80;
+background-color: #7D6B7D;
 height: 100px;
 width:100px;
 }
