Add another sqaure

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,14 @@ background-color: #7D6B7D;
 height: 100px;
 width:100px;
 }
+.square12{
+position: absolute;
+top: 400px;
+left: 100px;
+background-color: #7D6B7D;
+height: 100px;
+width:100px;
+}
 
 
 
