--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ width:100px;
 position: absolute;
 top: 500px;
 left: 100px;
-background-color: #7D6B7D;
+background-color:#8C0808;
 height: 100px;
 width:100px;
 }
