--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,14 @@ background-color:#8C0808;
 height: 100px;
 width:100px;
 }
+.square13{
+position: absolute;
+top: 500px;
+left: 100px;
+background-color:#8C0808;
+height: 100px;
+width:100px;
+}
 
 
 
