--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ width:100px;
 position: absolute;
 top: 600px;
 left: 100px;
-background-color:#8C0808;
+background-color:#EC4863;
 height: 100px;
 width:100px;
 }
