--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ width:100px;
 
 
 header{
-color:#1FCECB;
+color:black;
 font-family: 'Rampart One', cursive;
 text-align:center;
 font-size:2em;
