--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ body {
   background-color: #FFF2E0;
   height: 700px;
   width: 200px;
-  align-content:center;
 }
 
 
@@ -104,6 +103,14 @@ width:100px;
 position: absolute;
 top: 600px;
 left: 100px;
+background-color:#EC4863;
+height: 100px;
+width:100px;
+}
+.squareA{
+position: absolute;
+top: 100px;
+left: 300px;
 background-color:#EC4863;
 height: 100px;
 width:100px;
